--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -52,14 +52,14 @@
 
 
 <section>
-<section id="slide-orgefcad6f">
-<h2 id="orgefcad6f">Target utenti - statistiche</h2>
+<section id="slide-org5fa42bf">
+<h2 id="org5fa42bf">Target utenti - statistiche</h2>
 <p>
 In seguito all’analisi delle informazioni <a href="http://dati.istat.it/Index.aspx?DataSetCode=DCCV_ESC_CAPI">statistiche</a> sull’escursionismo italiano è stato individuato un preciso target utenti. Attorno ad esso è stato possibile costruire la migliore esperienza utente possibile, basata sulle abitudini e sulle attitudini del bacino di utenza rilevato. Il software si pone come uno degli obiettivi principali, infatti, un'adeguata facilità di utilizzo, per andare incontro ai bisogni della più grande possibile fetta di utenti.
 </p>
 
 
-<div id="org05b748e" class="figure">
+<div id="org26d2faf" class="figure">
 <p><img src="./img/target.svg" alt="target.svg" class="org-svg" width="40%" height="40%" />
 </p>
 </div>
@@ -68,18 +68,18 @@ In seguito all’analisi delle informazioni <a href="http://dati.istat.it/Index.
 </section>
 </section>
 <section>
-<section id="slide-org1d3c195">
-<h2 id="org1d3c195">NaTour in breve</h2>
+<section id="slide-orge178fd8">
+<h2 id="orge178fd8">NaTour in breve</h2>
 
-<div id="org89496d1" class="figure">
+<div id="org6e578fa" class="figure">
 <p><img src="./img/mockup-example.svg" alt="mockup-example.svg" class="org-svg" width="35%" height="35%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-orgce2df15">
-<h3 id="orgce2df15">Funzionalità offerte</h3>
+<section id="slide-orgdb8b44a">
+<h3 id="orgdb8b44a">Funzionalità offerte</h3>
 <p>
 NaTour offre tutte le funzionalità basilari necessarie a una piattaforma social, risultando estremamente familiare agli utenti. Tra queste ritroviamo:
 </p>
@@ -99,8 +99,8 @@ NaTour offre tutte le funzionalità basilari necessarie a una piattaforma social
 
 
 </section>
-<section id="slide-org635f288">
-<h3 id="org635f288">Requisiti</h3>
+<section id="slide-org039780e">
+<h3 id="org039780e">Requisiti</h3>
 <p>
 Talvolta è si ha il bisogno di consultare una mappa, o visualizzare delle indicazioni per un certo tragitto, per questo è necessario essere in possesso di:
 </p>
@@ -113,7 +113,7 @@ Talvolta è si ha il bisogno di consultare una mappa, o visualizzare delle indic
 </ul>
 
 
-<div id="org5159be7" class="figure">
+<div id="org44908df" class="figure">
 <p><img src="./img/lost.svg" alt="lost.svg" class="org-svg" width="35%" height="35%" />
 </p>
 </div>
@@ -122,8 +122,8 @@ Talvolta è si ha il bisogno di consultare una mappa, o visualizzare delle indic
 </section>
 </section>
 <section>
-<section id="slide-orgc39fd1d">
-<h2 id="orgc39fd1d">Architettura</h2>
+<section id="slide-orgef7e571">
+<h2 id="orgef7e571">Architettura</h2>
 <p>
 Per uno sviluppo pulito ed efficiente sono state seguite le linee guida dettate dalla Clean Architecture, creata da Robert C. Martin (Uncle Bob) nel 2012.
 </p>
@@ -133,7 +133,7 @@ Attenendosi soprattutto ai principi SOLID (applicabili a qualsiasi linguaggio OO
 </p>
 
 
-<div id="org65a522a" class="figure">
+<div id="org077f2d2" class="figure">
 <p><img src="./img/bob-clean.svg" alt="bob-clean.svg" class="org-svg" width="80%" height="80%" />
 </p>
 </div>
@@ -142,81 +142,81 @@ Attenendosi soprattutto ai principi SOLID (applicabili a qualsiasi linguaggio OO
 </section>
 </section>
 <section>
-<section id="slide-orga03418c">
-<h2 id="orga03418c">Servizi AWS</h2>
+<section id="slide-orgafa6190">
+<h2 id="orgafa6190">Servizi AWS</h2>
 
-<div id="org2a8b56a" class="figure">
+<div id="orgd5c7fb6" class="figure">
 <p><img src="./img/aws.png" alt="aws.png" width="40%" height="40%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-orgf966001">
-<h3 id="orgf966001">AWS Cognito</h3>
+<section id="slide-org27ffec6">
+<h3 id="org27ffec6">AWS Cognito</h3>
 <p>
 Cognito è un servizio di tipologia PaaS, sfruttato per l'autenticazione utente. Utilizza <a href="https://oauth.net/2/">OAuth2</a> per la delega degli accessi tramite identità federate.
 Presenta integrazione con altri servizi, che permette la gestione delle politiche di accesso alle risorse fornite da questi ultimi.
 </p>
 
 
-<div id="org2cebc6f" class="figure">
+<div id="org335d83b" class="figure">
 <p><img src="./img/cognito.svg" alt="cognito.svg" class="org-svg" width="20%" height="20%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-org58c5003">
-<h3 id="org58c5003">AWS EC2</h3>
+<section id="slide-org0a35b5e">
+<h3 id="org0a35b5e">AWS EC2</h3>
 <p>
 Servizio di tipologia IaaS che offre ambienti di elaborazione virtuale, compatibile con <a href="https://aws.amazon.com/it/autoscaling/">AWS Autoscaling</a>. Questo servizio è stato utilizzato per il deploy del servizio REST, in esecuzione su Ubuntu Server LTS, OS scelto per limitare l'utilizzo superfluo di risorse dell'istanza. L'accesso all'istanza virtuale è effettuato tramite SSH, quando necessario.
 </p>
 
 
-<div id="org851171a" class="figure">
+<div id="orgc40b901" class="figure">
 <p><img src="./img/ec2.svg" alt="ec2.svg" class="org-svg" width="20%" height="20%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-orgdab8a5b">
-<h3 id="orgdab8a5b">AWS RDS</h3>
+<section id="slide-orgef5d678">
+<h3 id="orgef5d678">AWS RDS</h3>
 <p>
 Amazon RDS ha permesso la configurazione e l’utilizzo del database relazionale (MySQL/MariaDB) per la persistenza dei dati. Questo servizio fornisce capacità ridimensionabili efficiente, automatizzando task tipiche di amministrazione hardware e software, oltre ai backup.
 </p>
 
 
-<div id="org0e33ce5" class="figure">
+<div id="org5bb4ade" class="figure">
 <p><img src="./img/rds.svg" alt="rds.svg" class="org-svg" width="20%" height="20%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-orga104df0">
-<h3 id="orga104df0">AWS S3</h3>
+<section id="slide-orga5d64da">
+<h3 id="orga5d64da">AWS S3</h3>
 <p>
 Il Simple Storage Service (Amazon S3) permette l’archiviazione di oggetti in modo scalabile, sicuro e veloce. La classe di archiviazione S3 è progettata per offrire una durabilità dei dati pari al 99,99999999999% (eleven 9s) degli oggetti per un determinato anno, che equivale a una perdita di oggetti media dello 0,00000000001%! Esso è stato adoperato in merito alla preservazione permanente dei file immagine caricati dagli utenti;
 </p>
 
 
-<div id="orgfeeb864" class="figure">
+<div id="orge18bfca" class="figure">
 <p><img src="./img/s3.svg" alt="s3.svg" class="org-svg" width="20%" height="20%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-org80aaca2">
-<h3 id="org80aaca2">AWS Lambda</h3>
+<section id="slide-orga998b7f">
+<h3 id="orga998b7f">AWS Lambda</h3>
 <p>
 La scelta di questo servizio è stata dettata dalla necessità di fornire consistenza al pool di utenti su Cognito. Tramite l'utilizzo di un trigger post-conferma non possono esserci discrepanze tra pool e database.
 </p>
 
 
-<div id="orgba10ad9" class="figure">
+<div id="orgcffa99f" class="figure">
 <p><img src="./img/lambda.svg" alt="lambda.svg" class="org-svg" width="20%" height="20%" />
 </p>
 </div>
@@ -225,8 +225,8 @@ La scelta di questo servizio è stata dettata dalla necessità di fornire consis
 </section>
 </section>
 <section>
-<section id="slide-orgd940777">
-<h2 id="orgd940777">Google Maps Platform</h2>
+<section id="slide-org5f1fae8">
+<h2 id="org5f1fae8">Google Maps Platform</h2>
 <ul>
 <li class="fragment appear">MapsAPI: per la visualizzazione interattiva di mappe statiche e dinamiche;</li>
 <li class="fragment appear">PlacesAPI: per il recupero di informazioni sui posti tramite richieste HTTP;</li>
@@ -240,7 +240,7 @@ La scelta di questo servizio è stata dettata dalla necessità di fornire consis
 </ul>
 
 
-<div id="orga1597db" class="figure">
+<div id="orgd7d9dd0" class="figure">
 <p><img src="./img/mapsapi.png" alt="mapsapi.png" width="20%" height="20%" />
 </p>
 </div>
@@ -249,8 +249,8 @@ La scelta di questo servizio è stata dettata dalla necessità di fornire consis
 </section>
 </section>
 <section>
-<section id="slide-orged41cce">
-<h2 id="orged41cce">Spring</h2>
+<section id="slide-org8feb905">
+<h2 id="org8feb905">Spring</h2>
 <p>
 Framework Java che fa largo uso della riflessione e dell'inversione di
 controllo (IoC). Tramite annotazioni permette di ridurre codice boilerplate, si adatta al pattern MVC.
@@ -266,15 +266,15 @@ controllo (IoC). Tramite annotazioni permette di ridurre codice boilerplate, si 
 </ul>
 
 
-<div id="orgc5c4d8c" class="figure">
+<div id="org20e38b3" class="figure">
 <p><img src="./img/spring-logo.png" alt="spring-logo.png" width="20%" height="20%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-orgab22e29">
-<h3 id="orgab22e29">Spring Boot</h3>
+<section id="slide-orgbfc3b3b">
+<h3 id="orgbfc3b3b">Spring Boot</h3>
 <p>
 Estensione del framework Spring che facilita la gestione delle dipendenze necessarie:
 </p>
@@ -287,7 +287,7 @@ Estensione del framework Spring che facilita la gestione delle dipendenze necess
 </ul>
 
 
-<div id="org87a3703" class="figure">
+<div id="org23044bc" class="figure">
 <p><img src="./img/spring-boot.svg" alt="spring-boot.svg" class="org-svg" width="50%" height="50%" />
 </p>
 </div>
@@ -296,18 +296,18 @@ Estensione del framework Spring che facilita la gestione delle dipendenze necess
 </section>
 </section>
 <section>
-<section id="slide-org0e08eb9">
-<h2 id="org0e08eb9">Client</h2>
+<section id="slide-org10f7622">
+<h2 id="org10f7622">Client</h2>
 
-<div id="org654fcd3" class="figure">
+<div id="org5958b5c" class="figure">
 <p><img src="./img/android-eat-apple.png" alt="android-eat-apple.png" width="20%" height="20%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-org400cd89">
-<h3 id="org400cd89">Applicazione nativa o ibrida?</h3>
+<section id="slide-org7e8b5fc">
+<h3 id="org7e8b5fc">Applicazione nativa o ibrida?</h3>
 <p>
 Considerato il target di clienti particolarmente esigente e la priorità data alle prestazioni è stato scelto di sviluppare un client mobile nativo, vista anche la richiesta iniziale della sola app per Android.
 </p>
@@ -346,15 +346,15 @@ Considerato il target di clienti particolarmente esigente e la priorità data al
 
 
 
-<div id="orga4a3f51" class="figure">
+<div id="org8c642d7" class="figure">
 <p><img src="./img/hybrid-native.jpg" alt="hybrid-native.jpg" width="40%" height="40%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-org8eec9f5">
-<h3 id="org8eec9f5">Linguaggio scelto</h3>
+<section id="slide-org3e958b6">
+<h3 id="org3e958b6">Linguaggio scelto</h3>
 <p>
 <b>Premessa</b>: Java e Kotlin possono coesistere all'interno dello stesso progetto!
 </p>
@@ -372,15 +372,15 @@ Considerato il target di clienti particolarmente esigente e la priorità data al
 </ol>
 
 
-<div id="org3f2b12a" class="figure">
+<div id="org3e53376" class="figure">
 <p><img src="./img/kotlin.png" alt="kotlin.png" width="15%" height="15%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-org669d67e">
-<h3 id="org669d67e">Pattern scelto</h3>
+<section id="slide-orgc31b313">
+<h3 id="orgc31b313">Pattern scelto</h3>
 <p>
 Sono stati "fusi" due pattern , ovvero <b>MVVM</b> e <b>MVI</b>, per rimediare ad alcune lacune.
 I problemi individuati col primo pattern si riassumono in:
@@ -406,7 +406,7 @@ nuovo pattern, chiamato dagli sviluppatori Android <a href="https://developer.an
 </ul>
 
 
-<div id="org0fcb47c" class="figure">
+<div id="orgffa9627" class="figure">
 <p><img src="./img/udf.png" alt="udf.png" width="30%" height="30%" />
 </p>
 </div>
@@ -415,52 +415,52 @@ nuovo pattern, chiamato dagli sviluppatori Android <a href="https://developer.an
 </section>
 </section>
 <section>
-<section id="slide-org5466632">
-<h2 id="org5466632">Strumenti di supporto all'usabilità sul campo</h2>
+<section id="slide-org938acbb">
+<h2 id="org938acbb">Strumenti di supporto all'usabilità sul campo</h2>
 
-<div id="orgd771145" class="figure">
+<div id="org983e698" class="figure">
 <p><img src="./img/gcloud.png" alt="gcloud.png" width="40%" height="40%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-orgf3cd3ce">
-<h3 id="orgf3cd3ce">Firebase Analytics</h3>
+<section id="slide-orgcdc2c9e">
+<h3 id="orgcdc2c9e">Firebase Analytics</h3>
 <p>
 Firebase Analytics è un servizio finalizzato all’elaborazione di vari tipi di statistiche riguardanti, ad esempio, la durata della sessione e la provenienza della visita. Nello specifico, si è usufruito di Analytics per il tracciamento di eventi, per comprendere al meglio esigenze e preferenze degli utenti durante l'utilizzo dell'app.
 </p>
 
 
-<div id="org0357572" class="figure">
+<div id="org108d79a" class="figure">
 <p><img src="./img/firebase-analytics.png" alt="firebase-analytics.png" width="60%" height="60%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-orgfb47622">
-<h3 id="orgfb47622">Firebase Crashlytics</h3>
+<section id="slide-org434c488">
+<h3 id="org434c488">Firebase Crashlytics</h3>
 <p>
 Firebase Crashlytics è un utile reporter di crash, di ausilio nel tracciamento e nella risoluzione di problemi di stabilità dell'app. Trattandosi di un reporter automatico, l'utente non è tenuto a riportare i crash manualmente, migliorando leggermente l'UX.
 </p>
 
 
-<div id="orgee83f44" class="figure">
+<div id="orgffcbfc8" class="figure">
 <p><img src="./img/firebase-crash.png" alt="firebase-crash.png" width="40%" height="40%" />
 </p>
 </div>
 
 
 </section>
-<section id="slide-org232ed91">
-<h3 id="org232ed91">Firebase Performance</h3>
+<section id="slide-orgfe85968">
+<h3 id="orgfe85968">Firebase Performance</h3>
 <p>
 Firebase Performance, infine, è un servizio utilizzato per avere un insight delle caratteristiche prestazionali dell’app, anche attraverso metriche personalizzate.
 </p>
 
 
-<div id="org925cc5d" class="figure">
+<div id="org59c31bd" class="figure">
 <p><img src="./img/performance.png" alt="performance.png" width="45%" height="45%" />
 </p>
 </div>
@@ -469,8 +469,8 @@ Firebase Performance, infine, è un servizio utilizzato per avere un insight del
 </section>
 </section>
 <section>
-<section id="slide-orgfdff15b">
-<h2 id="orgfdff15b">Meet the team</h2>
+<section id="slide-orgbe1fa8a">
+<h2 id="orgbe1fa8a">Meet the team</h2>
 <div class="git-row">
   <div class="git-column">
     <p>
@@ -493,7 +493,7 @@ Firebase Performance, infine, è un servizio utilizzato per avere un insight del
 </section>
 </section>
 </div>
-<a class="uni-corner" href="https://informatica.dieti.unina.it/index.php/it/" target="blank" title="Visita il nostro dipartimento"> <img src="img/federico.svg"></a> <a class="app-corner" href="https://informatica.dieti.unina.it/index.php/it/" target="blank" title="Il nostro logo"> <img src="img/dieti.png"></a>
+<a class="uni-corner" href="https://www.unina.it/myfedericoii" target="blank" title="Università"> <img src="img/federico.svg"></a> <a class="app-corner" href="https://informatica.dieti.unina.it/" target="blank" title="Visita il nostro dipartimento"> <img src="img/dieti.png"></a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/reveal.js/dist/reveal.js"></script>
 
